# market_maker

./: LICENSE  README.md  exchange_instr_config.ini
cpp/: CMakeLists.txt  README.md
cpp/config/: market_making_strategy.ini.example
cpp/exchanges/: CMakeLists.txt  data_fetcher_factory.cpp  data_fetcher_factory.hpp  exchange_handler.cpp  i_exchange_data_fetcher.hpp  i_exchange_oms.hpp  i_exchange_pms.hpp  i_exchange_subscriber.hpp  oms_factory.cpp  oms_factory.hpp  pms_factory.cpp  pms_factory.hpp  subscriber_factory.cpp  subscriber_factory.hpp
cpp/exchanges/binance/: binance_config.json
cpp/exchanges/binance/http/: binance_data_fetcher.cpp  binance_data_fetcher.hpp
cpp/exchanges/binance/private_websocket/: binance_oms.cpp  binance_oms.hpp  binance_pms.cpp  binance_pms.hpp  binance_private_websocket_handler.cpp  binance_private_websocket_handler.hpp
cpp/exchanges/binance/public_websocket/: binance_public_websocket_handler.cpp  binance_public_websocket_handler.hpp  binance_subscriber.cpp  binance_subscriber.hpp
cpp/exchanges/deribit/: README.md  deribit_config.json
cpp/exchanges/deribit/http/: deribit_data_fetcher.cpp  deribit_data_fetcher.hpp
cpp/exchanges/deribit/private_websocket/: deribit_oms.cpp  deribit_oms.hpp  deribit_pms.cpp  deribit_pms.hpp  deribit_private_websocket_handler.cpp  deribit_private_websocket_handler.hpp
cpp/exchanges/deribit/public_websocket/: deribit_public_websocket_handler.cpp  deribit_public_websocket_handler.hpp  deribit_subscriber.cpp  deribit_subscriber.hpp
cpp/exchanges/grvt/: README.md  grvt_auth.cpp  grvt_auth.hpp  grvt_config.json
cpp/exchanges/grvt/http/: grvt_data_fetcher.cpp  grvt_data_fetcher.hpp
cpp/exchanges/grvt/private_websocket/: grvt_oms.cpp  grvt_oms.hpp  grvt_pms.cpp  grvt_pms.hpp  grvt_private_websocket_handler.cpp  grvt_private_websocket_handler.hpp
cpp/exchanges/grvt/public_websocket/: grvt_public_websocket_handler.cpp  grvt_public_websocket_handler.hpp  grvt_subscriber.cpp  grvt_subscriber.hpp
cpp/exchanges/websocket/: i_exchange_websocket_handler.hpp  i_websocket_transport.hpp  libuv_websocket_transport.cpp  libuv_websocket_transport.hpp  websocket_transport.cpp  websocket_transport.hpp
cpp/market_server/: CMakeLists.txt  market_server_lib.cpp  market_server_lib.hpp  market_server_main.cpp  market_server_service.cpp  market_server_service.hpp
cpp/market_server/config/: market_server_template.ini
cpp/position_server/: CMakeLists.txt  position_server_lib.cpp  position_server_lib.hpp  position_server_main.cpp  position_server_service.cpp  position_server_service.hpp
cpp/position_server/config/: position_server_template.ini
cpp/proto/: acc_balance.proto  market_data.proto  order.proto  position.proto
cpp/strategies/: CMakeLists.txt
cpp/strategies/base_strategy/: abstract_strategy.cpp  abstract_strategy.hpp
cpp/strategies/mm_strategy/: market_making_strategy.cpp  market_making_strategy.hpp  market_making_strategy_config.cpp  market_making_strategy_config.hpp
cpp/strategies/mm_strategy/models/: glft_spread_simulation.cpp  glft_target.cpp  glft_target.hpp
cpp/tests/: CMakeLists.txt  README.md  test_config.ini  test_runner.cpp
cpp/tests/config/: binance_oms.json  env.test.example  test_config_deribit.ini  test_config_fullchain.ini  test_config_grvt.ini  test_config_manager.cpp  test_config_manager.hpp  test_config_manager_standalone.cpp  test_config_manager_standalone.hpp  test_config_orderflow.ini  test_config_positionflow.ini  test_exchange_config.ini
cpp/tests/integration/: test_deribit_full_flow.cpp  test_deribit_integration.cpp  test_full_chain_integration.cpp  test_grvt_full_flow.cpp  test_grvt_integration.cpp  test_order_flow_integration.cpp  test_position_flow_integration.cpp
cpp/tests/mocks/: mock_http_handler.cpp  mock_http_handler.hpp  mock_websocket_handler.cpp  mock_websocket_handler.hpp  mock_websocket_transport.cpp  mock_websocket_transport.hpp
cpp/tests/unit/config/: test_process_config_manager.cpp
cpp/tests/unit/exchanges/: test_binance_oms.cpp  test_deribit_oms.cpp  test_grvt_oms.cpp  test_oms_factory.cpp
cpp/trader/: CMakeLists.txt  mini_oms.cpp  mini_oms.hpp  mini_pms.cpp  mini_pms.hpp  strategy_container.cpp  strategy_container.hpp  trader_lib.cpp  trader_lib.hpp  trader_main.cpp  zmq_mds_adapter.hpp  zmq_oms_adapter.cpp  zmq_oms_adapter.hpp  zmq_pms_adapter.hpp
cpp/trading_engine/: CMakeLists.txt  README.md  main.cpp  trading_engine.cpp  trading_engine.hpp  trading_engine.service.in  trading_engine_lib.cpp  trading_engine_lib.hpp  trading_engine_main.cpp  trading_engine_service.cpp  trading_engine_service.hpp
cpp/trading_engine/config/: trading_engine_template.ini
cpp/utils/: CMakeLists.txt  constants.hpp  error_handling.hpp
cpp/utils/app_service/: app_service.cpp  app_service.hpp
cpp/utils/config/: config.hpp  config_manager.cpp  config_manager.hpp  process_config_manager.cpp  process_config_manager.hpp
cpp/utils/exchange/: exchange_symbol_info.hpp  exchange_symbol_registry.cpp  exchange_symbol_registry.hpp
cpp/utils/handlers/: CMakeLists.txt  message_handler.cpp  message_handler.hpp  message_handler_manager.cpp  message_handler_manager.hpp
cpp/utils/health/: health_checker.hpp
cpp/utils/http/: curl_http_handler.cpp  curl_http_handler.hpp  i_http_handler.hpp
cpp/utils/logging/: log_helper.hpp  log_levels.hpp  logger.cpp  logger.hpp
cpp/utils/mds/: exchange_clients.hpp  market_data.hpp  market_data_normalizer.cpp  market_data_normalizer.hpp  orderbook_binary.cpp  orderbook_binary.hpp  parser_factory.cpp  parser_factory.hpp
cpp/utils/metrics/: metrics_collector.hpp
cpp/utils/oms/: exchange_monitor.cpp  exchange_monitor.hpp  exchange_oms.hpp  oms.hpp  order.hpp  order_binary.cpp  order_binary.hpp  order_state.hpp  types.hpp
cpp/utils/pms/: position_binary.cpp  position_binary.hpp
cpp/utils/resilience/: resilience.hpp
cpp/utils/websocket/: i_websocket_handler.hpp  libuv_websocket_handler.cpp  libuv_websocket_handler.hpp
cpp/utils/zmq/: zmq_publisher.cpp  zmq_publisher.hpp  zmq_subscriber.cpp  zmq_subscriber.hpp
docs/: deploy.md  (+7 more)
(+52 files in other folders)
